--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,15 +29,17 @@
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".view.facerecognition.FaceRecognition"/>
-        <activity android:name=".view.Routes.RoutesActivity">
-
-        </activity>
-        <activity android:name=".view.TestActivity" >
+        <activity android:name=".view.facerecognition.FaceRecognition">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".view.Routes.RoutesActivity">
+
+        </activity>
+        <activity android:name=".view.TestActivity" >
+
         </activity>
     </application>
 
