--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
 
     implementation 'com.google.android.gms:play-services-vision:15.0.1'
+    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
 
     compile project(path: ':openCVLibrary341')
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
