--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
-
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
@@ -20,6 +20,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+kapt{
+    generateStubs = true
 }
 
 dependencies {
@@ -63,4 +67,8 @@ dependencies {
     compile 'com.google.apis:google-api-services-calendar:v3-rev305-1.23.0'
     compile 'com.karumi:dexter:4.1.0'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.specyci:residemenu:1.6+'
+
+    implementation 'com.google.dagger:dagger-android-support:2.13' // Dagger 2 Android 支持包
+    kapt 'com.google.dagger:dagger-compiler:2.13' // Dagger 2 注解处理
 }
