--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_CALENDAR"/>
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="true"
@@ -28,7 +29,20 @@
             android:name=".view.home.HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <!-- on click of the link the activity should get launched. -->
+                <data
+                    android:host="www.bookmybus.com"
+                    android:scheme="http" />
+                <!-- what kind of data you're dealing with and who is the host -->
+                <data
+                    android:host="vyom"
+                    android:scheme="deeplinking" />
+            </intent-filter>
         </activity>
         <activity android:name=".view.facerecognition.FaceRecognition">
             <intent-filter>
